--- a/app/src/main/res/layout/recommended_offer_item.xml
+++ b/app/src/main/res/layout/recommended_offer_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="280dp"
     android:layout_height="wrap_content"
+    android:layout_marginRight="14dp"
+    android:layout_marginVertical="4dp"
     app:cardCornerRadius="12dp">
 
     <LinearLayout
