--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.ENSAKConnect" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -21,5 +21,5 @@
 
     <style name="Theme.ENSAKConnect.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.ENSAKConnect.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.ENSAKConnect.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" ></style>
 </resources>
