feat: created view model and updating ui when loading state changes

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -21,10 +21,17 @@
             android:src="@drawable/logo_ensak_connect"
             android:layout_marginBottom="24dp"/>
         <ProgressBar
+            android:id="@+id/progressLoading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
             style="?android:attr/progressBarStyleHorizontal"
-            android:indeterminateTint="@color/primary"/>
+            android:indeterminateTint="@color/primary"
+            android:layout_marginBottom="24dp"/>
+        <Button
+            android:id="@+id/btnStopLoading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stop loading"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
