feat: checking server connection and user token

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -28,10 +28,22 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:indeterminateTint="@color/primary"
             android:layout_marginBottom="24dp"/>
-        <Button
-            android:id="@+id/btnStopLoading"
+        <TextView
+            android:id="@+id/txtErrorMessage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Stop loading"/>
+            android:layout_height="48dp"
+            android:text="Error: "
+            android:textSize="12sp"
+            android:textColor="@color/error"
+            android:textAlignment="center"
+            android:maxLines="3"/>
+        <TextView
+            android:id="@+id/txtActionMessage"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Actions: "
+            android:textSize="12sp"
+            android:visibility="gone"
+            android:textAlignment="center"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
