--- a/app/src/main/res/layout/activity_registration_screen.xml
+++ b/app/src/main/res/layout/activity_registration_screen.xml
@@ -32,13 +32,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="First Name"
+            android:text="Full Name"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="4dp"/>
 
         <EditText
-            android:id="@+id/editTextFirstName"
+            android:id="@+id/editTextFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_bg"
@@ -47,7 +47,7 @@
     </LinearLayout>
 
     <!-- Edit Text avec titre "Last Name" -->
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -68,7 +68,7 @@
             android:background="@drawable/edittext_bg"
             android:padding="8dp"
             android:hint="Enter your last name" />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!-- Edit Text avec titre "Email" -->
     <LinearLayout
