CV button and profile description

--- a/app/src/main/res/drawable/lighpurple_button.xml
+++ b/app/src/main/res/drawable/lighpurple_button.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <solid android:color="@color/light_putple"/> <!-- This is a purple color, replace with your desired color -->
+    <corners android:radius="10dp"/> <!-- This will give you rounded corners -->
+</shape>
