--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/white"/> <!-- Or any color you want for the circle background -->
+    <size
+        android:width="100dp"
+        android:height="100dp"
+        />
+</shape>
