--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -119,7 +120,44 @@
         android:layout_marginBottom="16dp"
         android:layout_marginHorizontal="16dp"/>
 
+    <LinearLayout
+        android:id="@+id/experiencesContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/resumebtn"
+        android:orientation="vertical"
+        android:padding="16dp"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/experienceProfessionel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/exp_rience_professionnelles"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
+        <Button
+            android:id="@+id/myButton"
+            style="@style/CustomizableButton"
+            android:text="@string/button_text" />
+
+
+    </LinearLayout>
+
+
+        <include layout="@layout/expereince_fragment" />
+        <!-- Include as many as needed, or add them dynamically in code -->
+    </LinearLayout>
 
 
 </RelativeLayout>
