--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="background">#FFf2f2f2</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="light_putple">#FFd3d2f4</color>
     <color name="purple_500">#FF6200EE</color>
@@ -9,6 +10,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#FFe2e8f0</color>
+    <color name="grey_700">#FF666666</color>
 
     <color name="primary">#FF5552FE</color>
 
