--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,6 +43,9 @@
         <item name="android:minWidth">0dp</item>
         <item name="android:padding">10sp</item>
 
+
+
+
     </style>
 
     <style name="PurpleButton" parent="Widget.AppCompat.Button">
@@ -53,6 +56,15 @@
         <item name="android:layout_marginBottom">16dp</item>
     </style>
 
+    <style name="CustomizableButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">65dp</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:background">@drawable/button_style</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">5dp</item>
 
+    </style>
 
 </resources>
