--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="100"
-        android:icon="@drawable/search"
+        android:icon="@drawable/ic_search"
         app:showAsAction="always"
         app:iconTint="@color/black"
         android:title="Search" />
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/action_notifications"
         android:orderInCategory="100"
-        android:icon="@drawable/notifications"
+        android:icon="@drawable/ic_notifications"
         app:showAsAction="always"
         app:iconTint="@color/black"
         android:title="Notifications" />
