--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_menu_item1_margin">90dp</dimen>
+    <dimen name="fab_menu_item2_margin">164dp</dimen>
+    <dimen name="fab_menu_item3_margin">238dp</dimen>
 </resources>
