wip: screen for creating new question

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="primary">#FF5552FE</color>
+    <color name="background_light">#F2F2F2</color>
 
     <!--  Feedback colors  -->
     <color name="error">#ff3333</color>
