--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -155,8 +155,13 @@
     </LinearLayout>
 
 
-        <include layout="@layout/expereince_fragment" />
-        <!-- Include as many as needed, or add them dynamically in code -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/experienceRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
+
+
     </LinearLayout>
 
     <LinearLayout
