--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -199,8 +199,11 @@
         </LinearLayout>
 
 
-        <include layout="@layout/expereince_fragment" />
-        <!-- Include as many as needed, or add them dynamically in code -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/educationRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
     </LinearLayout>
 
     <LinearLayout
