--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/purple_500"/>
-    <corners android:radius="8dp"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+android:color="#5CF3F3F3">
+<item>
+    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <solid android:color="@color/primary"/>
+        <corners android:radius="8dp"/>
+    </shape>
+</item>
+</ripple>
+
