--- a/app/src/main/res/layout/activity_create_question.xml
+++ b/app/src/main/res/layout/activity_create_question.xml
@@ -29,44 +29,30 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="Question"
-            android:textColor="#000"
-            android:textSize="16sp" />
+            android:text="Question :"
+            style="@style/Label"/>
 
         <EditText
             android:id="@+id/txtQuestion"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
+            style="@style/EditTextBase"
+            android:inputType="text"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/edit_text_style"
-            android:hint="How to create an android studio project?"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="16dp"
-            android:paddingTop="12dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="12dp" />
+            android:hint="How to create an android studio project?" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="Tags"
-            android:textColor="#000"
-            android:textSize="16sp" />
+            android:text="Tags :"
+            style="@style/Label"/>
 
         <EditText
             android:id="@+id/txtTags"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/edit_text_style"
-            android:hint="android, java, coding, ..."
-            android:inputType="textEmailAddress"
-            android:paddingLeft="16dp"
-            android:paddingTop="12dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="12dp" />
+            android:layout_height="wrap_content"
+            style="@style/EditTextBase"
+            android:hint="android, java, coding, ..." />
 
     </LinearLayout>
 
@@ -78,22 +64,20 @@
         android:gravity="end"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/button_style"
-            android:text="Create"
-            android:textColor="@color/error" />
+            android:layout_height="wrap_content"
+            style="@style/ButtonDangerSecondary"
+            android:layout_marginEnd="16dp"
+            android:text="Cancel" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCreate"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:background="@drawable/button_style"
-            android:text="Create"
-            android:textColor="#FFFFFF" />
+            android:layout_height="wrap_content"
+            style="@style/ButtonPrimary"
+            android:text="Create" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
