--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,9 @@
 
     <color name="primary">#FF5552FE</color>
     <color name="background_light">#F2F2F2</color>
+    <color name="lbl_gray">#718096</color>
 
     <!--  Feedback colors  -->
     <color name="error">#ff3333</color>
+    <color name="error_30">#23ff3333</color>
 </resources>
