--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,6 +56,33 @@
         <item name="android:layout_marginBottom">16dp</item>
     </style>
 
+    <style name="ButtonBase" parent="Widget.AppCompat.Button">
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+    </style>
+
+
+    <!--  Buttons  -->
+    <style name="ButtonPrimary" parent="ButtonBase">
+        <item name="android:background">@drawable/button_style</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonDanger" parent="ButtonBase">
+        <item name="android:background">@drawable/button_danger_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonDangerSecondary" parent="ButtonBase">
+        <item name="android:background">@drawable/button_danger_secondary_background</item>
+        <item name="android:textColor">@color/error</item>
+    </style>
+
     <style name="CustomizableButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">65dp</item>
         <item name="android:layout_height">25dp</item>
@@ -64,7 +91,24 @@
         <item name="android:textSize">10sp</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">5dp</item>
+    </style>
 
+    <!-- EditText -->
+    <style name="EditTextBase" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/bg_edittext</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
+
+    <!--  Typography   -->
+    <style name="Label">
+        <item name="android:textColor">@color/lbl_gray</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
 </resources>
