Revert "Education Adapter"
This reverts commit 7e484801cf5c85fdb2a059765ef92b193df971f8.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -199,11 +199,8 @@
         </LinearLayout>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/educationRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+        <include layout="@layout/expereince_fragment" />
+        <!-- Include as many as needed, or add them dynamically in code -->
     </LinearLayout>
 
     <LinearLayout
