--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="grey_700">#FF666666</color>
 
     <color name="primary">#FF5552FE</color>
+    <color name="primary_35">#235552FE</color>
     <color name="background_light">#F2F2F2</color>
     <color name="lbl_gray">#718096</color>
 
