--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/primary</item>
+        <item name="colorSecondaryVariant">@color/primary</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
@@ -42,12 +42,11 @@
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
         <item name="android:padding">10sp</item>
-
-
-
-
     </style>
 
+    <style name="PreferenceCategoryTitle">
+        <item name="android:textSize">20sp</item> <!-- Taille du texte en sp (pixels indépendants de l'échelle) -->
+    </style>
     <style name="ProfileActivityTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
     </style>
 
