--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -118,4 +118,15 @@
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
+    <!--  Progress  -->
+    <style name="LoadingWhite">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:elevation">32dp</item>
+        <item name="android:indeterminate">true</item>
+        <item name="android:indeterminateTintMode">src_atop</item>
+        <item name="android:indeterminateTint">@color/white</item>
+    </style>
+
 </resources>
