--- a/app/src/main/res/layout/activity_registration_screen.xml
+++ b/app/src/main/res/layout/activity_registration_screen.xml
@@ -2,48 +2,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingHorizontal="32dp"
+    android:paddingVertical="64dp"
+    android:background="@color/background">
 
-    <!-- Titre "Welcome to Register" en gras -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to Register"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"/>
+        style="@style/Heading3"
+        android:layout_marginBottom="12dp"/>
 
-    <!-- Description "discover what our community can offer you" -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="discover what our community can offer you"
-        android:textSize="16sp" />
-
-    <!-- Edit Text avec titre "First Name" -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_marginBottom="32dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            style="@style/Heading5"
+            android:text="discover what our community can offer you"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="1dp">
+        </View>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="16dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Full Name"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Label"
             android:layout_marginBottom="4dp"/>
 
         <EditText
             android:id="@+id/editTextFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
-            android:padding="8dp"
-            android:hint="Enter your first name" />
+            style="@style/EditTextBase"
+            android:hint="Enter your full name" />
     </LinearLayout>
 
     <!-- Edit Text avec titre "Last Name" -->
@@ -75,24 +81,45 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="16dp">
+        android:layout_marginBottom="16dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Label"
             android:layout_marginBottom="4dp"/>
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
-            android:padding="8dp"
+            style="@style/EditTextBase"
             android:inputType="textEmailAddress"
             android:hint="Enter your email" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Account type"
+            style="@style/Label"
+            android:layout_marginBottom="4dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerProfession"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            style="@style/EditTextBase"
+            android:popupBackground="@drawable/bg_edittext"
+            android:padding="8dp" />
+
     </LinearLayout>
 
     <!-- Edit Text avec titre "Password" -->
@@ -100,22 +127,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="16dp">
+        android:layout_marginBottom="16dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Label"
             android:layout_marginBottom="4dp"/>
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
-            android:padding="8dp"
+            style="@style/EditTextBase"
             android:inputType="textPassword"
             android:hint="Enter your password" />
     </LinearLayout>
@@ -124,55 +149,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="16dp">
+        android:layout_marginBottom="32dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirm Password"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Label"
             android:layout_marginBottom="4dp"/>
 
         <EditText
             android:id="@+id/ConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edittext_bg"
-            android:padding="8dp"
+            style="@style/EditTextBase"
             android:inputType="textPassword"
             android:hint="Confirm password" />
     </LinearLayout>
-    <!-- Ajouter un Spinner / Dropdown pour le type de compte -->
-    <!-- ... -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Profession"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="4dp"/>
-
-        <Spinner
-            android:id="@+id/spinnerProfession"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/edittext_bg"
-            android:padding="8dp" />
-
-    </LinearLayout>
-    <!-- Bouton "Register" -->
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:layout_marginTop="24dp" />
+        android:layout_marginBottom="16dp"
+        style="@style/ButtonPrimary"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        style="@style/ButtonPrimarySecondary"/>
 
 </LinearLayout>
